trunk/Source/include/OpenGL1x.hpp


extern "C" void __stdcall glScaled(double x, double y, double z);

extern "C" void __stdcall glScalef(float x, float y, float z);

extern "C" void __stdcall glSelectBuffer(int size, Opengltokens::PGLuint buffer);

extern "C" void __stdcall glShadeModel(unsigned mode);

extern "C" void __stdcall glTexCoord1d(double s);

extern "C" void __stdcall glTexCoord1dv(System::PDouble v);

extern "C" void __stdcall glTexCoord1f(float s);

extern "C" void __stdcall glTexCoord1fv(System::PSingle v);

extern "C" void __stdcall glTexCoord1i(int s);

extern "C" void __stdcall glTexCoord1iv(Opengltokens::PGLint v);

extern "C" void __stdcall glTexCoord1s(short s);

extern "C" void __stdcall glTexCoord1sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glTexCoord2d(double s, double t);

extern "C" void __stdcall glTexCoord2dv(System::PDouble v);

extern "C" void __stdcall glTexCoord2f(float s, float t);

extern "C" void __stdcall glTexCoord2fv(System::PSingle v);

extern "C" void __stdcall glTexCoord2i(int s, int t);

extern "C" void __stdcall glTexCoord2iv(Opengltokens::PGLint v);

extern "C" void __stdcall glTexCoord2s(short s, short t);

extern "C" void __stdcall glTexCoord2sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glTexCoord3d(double s, double t, double r);

extern "C" void __stdcall glTexCoord3dv(System::PDouble v);

extern "C" void __stdcall glTexCoord3f(float s, float t, float r);

extern "C" void __stdcall glTexCoord3fv(System::PSingle v);

extern "C" void __stdcall glTexCoord3i(int s, int t, int r);

extern "C" void __stdcall glTexCoord3iv(Opengltokens::PGLint v);

extern "C" void __stdcall glTexCoord3s(short s, short t, short r);

extern "C" void __stdcall glTexCoord3sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glTexCoord4d(double s, double t, double r, double q);

extern "C" void __stdcall glTexCoord4dv(System::PDouble v);

extern "C" void __stdcall glTexCoord4f(float s, float t, float r, float q);

extern "C" void __stdcall glTexCoord4fv(System::PSingle v);

extern "C" void __stdcall glTexCoord4i(int s, int t, int r, int q);

extern "C" void __stdcall glTexCoord4iv(Opengltokens::PGLint v);

extern "C" void __stdcall glTexCoord4s(short s, short t, short r, short q);

extern "C" void __stdcall glTexCoord4sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glTexCoordPointer(int size, unsigned atype, int stride, void * data);

extern "C" void __stdcall glTexEnvf(unsigned target, unsigned pname, float param);

extern "C" void __stdcall glTexEnvfv(unsigned target, unsigned pname, System::PSingle params);

extern "C" void __stdcall glTexEnvi(unsigned target, unsigned pname, int param);

extern "C" void __stdcall glTexEnviv(unsigned target, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glTexGend(unsigned coord, unsigned pname, double param);

extern "C" void __stdcall glTexGendv(unsigned coord, unsigned pname, System::PDouble params);

extern "C" void __stdcall glTexGenf(unsigned coord, unsigned pname, float param);

extern "C" void __stdcall glTexGenfv(unsigned coord, unsigned pname, System::PSingle params);

extern "C" void __stdcall glTexGeni(unsigned coord, unsigned pname, int param);

extern "C" void __stdcall glTexGeniv(unsigned coord, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glTranslated(double x, double y, double z);

extern "C" void __stdcall glTranslatef(float x, float y, float z);

extern "C" void __stdcall glVertex2d(double x, double y);

extern "C" void __stdcall glVertex2dv(System::PDouble v);

extern "C" void __stdcall glVertex2f(float x, float y);

extern "C" void __stdcall glVertex2fv(System::PSingle v);

extern "C" void __stdcall glVertex2i(int x, int y);

extern "C" void __stdcall glVertex2iv(Opengltokens::PGLint v);

extern "C" void __stdcall glVertex2s(short x, short y);

extern "C" void __stdcall glVertex2sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glVertex3d(double x, double y, double z);

extern "C" void __stdcall glVertex3dv(System::PDouble v);

extern "C" void __stdcall glVertex3f(float x, float y, float z);

extern "C" void __stdcall glVertex3fv(System::PSingle v);

extern "C" void __stdcall glVertex3i(int x, int y, int z);

extern "C" void __stdcall glVertex3iv(Opengltokens::PGLint v);

extern "C" void __stdcall glVertex3s(short x, short y, short z);

extern "C" void __stdcall glVertex3sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glVertex4d(double x, double y, double z, double w);

extern "C" void __stdcall glVertex4dv(System::PDouble v);

extern "C" void __stdcall glVertex4f(float x, float y, float z, float w);

extern "C" void __stdcall glVertex4fv(System::PSingle v);

extern "C" void __stdcall glVertex4i(int x, int y, int z, int w);

extern "C" void __stdcall glVertex4iv(Opengltokens::PGLint v);

extern "C" void __stdcall glVertex4s(short x, short y, short z, short w);

extern "C" void __stdcall glVertex4sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glVertexPointer(int size, unsigned atype, int stride, void * data);